# SPDX-FileCopyrightText: Fondazione Istituto Italiano di Tecnologia (IIT)
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(IWear)
add_subdirectory(IXsensMVNControl)
add_subdirectory(IHumanState)
add_subdirectory(IHumanWrench)
add_subdirectory(IHumanDynamics)
add_subdirectory(IWearableTargets)
